<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default"
    tools:context="com.gmail.reebrando.myteam.MainActivity">

    <TextView
        android:text="@string/app_name"
        android:id="@+id/tvTitle"
        style="@style/label_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edName">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edAge">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_spacing"
            android:id="@+id/spnMyTeam"
            android:entries="@array/teams_array"/>

        <Button
            android:text="@string/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm"
            android:background="@color/colorAccent"/>

    </LinearLayout>
    </ScrollView>

    <TextView
        android:text="@string/developed"
        android:id="@+id/tvDeveloped"
        style="@style/label_botton" />

</RelativeLayout>
